# CE3D

./: .coafile  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CODESTYLE.md  INSTALL  Makefile  README  README.md  makefile
CE3D/: CMakeLists.txt  Doxyfile.in
CE3D/camera/: CMakeLists.txt  camera.h  camera_code.h  linear_camera.h  linear_camera_code.h  manual_camera.h  manual_camera_code.h  orthographic_camera.h  orthographic_camera_code.h
CE3D/console/: CMakeLists.txt  console.cpp  console.h  console_code.h  console_string_attributes.cpp  console_string_attributes.h  console_string_attributes_code.h
CE3D/math/: CMakeLists.txt  linear_function.cpp  linear_function.h
CE3D/model/: model.h  model_code.h  vertex.h  vertex_code.h
CE3D/renderer/: CMakeLists.txt  renderer.h  renderer_code.h
CE3D/renderer/console/: CMakeLists.txt  console_drawer.cpp  console_drawer.h  console_material.cpp  console_material.h  console_renderer.cpp  console_renderer.h
CE3D/test/: CMakeLists.txt  TestEnvironment.cpp  TestEnvironment.h  testutilities.cpp  testutilities.h
CE3D/test/camera/: CMakeLists.txt  orthographic_camera_test.cpp
CE3D/test/console/: CMakeLists.txt  console_test.cpp
CE3D/test/math/: CMakeLists.txt  linear_function_test.cpp
CE3D/test/renderer/console/: CMakeLists.txt  console_drawer_test.cpp  console_material_test.cpp  console_renderer_test.cpp
CE3D/test/transformation/: CMakeLists.txt  custom_test.cpp  identity_test.cpp  orthogonal_depth_projection_test.cpp  orthogonal_projection_test.cpp  transformation_chain_test.cpp  transformation_test.cpp  transformation_test.h  translation_test.cpp
CE3D/test/util/: CMakeLists.txt  boost_extensions_test.cpp
CE3D/test/world/: world_test.cpp
CE3D/transformation/: CMakeLists.txt  custom.cpp  custom.h  final_translation.cpp  final_translation.h  identity.cpp  identity.h  itransformable.cpp  itransformable.h  orthogonal_depth_projection.cpp  orthogonal_depth_projection.h  orthogonal_projection.cpp  orthogonal_projection.h  perspective_projection.h  rotation.cpp  rotation.h  scale.cpp  scale.h  transformation.cpp  transformation.h  transformation_chain.cpp  transformation_chain.h  transformation_chain_code.h  translation.cpp  translation.h
CE3D/util/: CE3D_matrix.h  CE3D_vector.h  boost_extensions.h  boost_extensions_code.h  dereference_iterator.h  keyboard_state.cpp  keyboard_state.h  stdinc.h  stdinc_c.h
CE3D/world/: CMakeLists.txt  world.h  world_code.h
IDE/vs2012/: CE3D.sdf  CE3D.sln  CE3D.vcxproj
doc/: CC_rules  Orthogonal Projection DE.tex  Orthogonal Projection EN.tex  renderer.txt
doc/spec/: headername.cpp  headername.h  headername_code.h  headername_test.cpp  headername_wrapper.h  spec
examples/: README
examples/Cube/: Makefile  main.cpp
make/: clean.mk
src/: CE3D.h  CE3D_config.h.in  CMakeLists.txt  Doxyfile.in  stdmacros.h  utils.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  linear_camera.cpp  linear_camera.h  linear_camera_code.h  manual_camera.h  manual_camera_code.h
src/console/: CMakeLists.txt  console.c  console.cpp  console.h  console_code.h  console_string_attributes.cpp  console_string_attributes.h  keyboard_thread.cpp  keyboard_thread.h
src/math/: matrix.h  vector.h
src/model/: CMakeLists.txt  line_model.h  model.cpp  model.h  model_code.h  point_model.h  triangle_model.h  vertex.cpp  vertex.h  vertex_code.h
src/models/: model.h
src/renderer/: CMakeLists.txt  console_material.cpp  console_material.h  console_renderer.cpp  console_renderer.h  renderer.h  renderer_code.h
src/renderer/console/: CMakeLists.txt  console_drawer.cpp  console_drawer.h  console_material.cpp  console_material.h  console_renderer.cpp  console_renderer.h
src/test/: CMakeLists.txt  TestEnvironment.cpp  TestEnvironment.h
src/test/console/: console_test.cpp
src/test/renderer/: CMakeLists.txt
src/test/renderer/console/: CMakeLists.txt  console_drawer_test.cpp  console_material_test.cpp  console_renderer_test.cpp
src/test/transformation/: CMakeLists.txt  custom_test.cpp  orthogonal_projection_test.cpp  transformation_chain_test.cpp  transformation_test.cpp  transformation_test.h  translation_test.cpp  translation_test.h
src/test/util/: CMakeLists.txt  boost_extensions_test.cpp
src/test/world/: CMakeLists.txt  world_test.cpp
src/transformation/: CMakeLists.txt  custom.cpp  custom.h  directional_translation.h  euclidean_translation.cpp  euclidean_translation.h  identity.cpp  identity.h  itransformable.h  orthogonal_depth_projection.cpp  orthogonal_depth_projection.h  orthogonal_projection.cpp  orthogonal_projection.h  perspective_projection.cpp  rotation.cpp  rotation.h  scale.cpp  scale.h  transformation.cpp  transformation.h  transformation_chain.cpp  transformation_chain.h  translation.cpp  translation.h
src/util/: CE3D_matrix.h  CE3D_vector.h  CMakeLists.txt  boost_extensions.h  boost_extensions_code.cpp  boost_extensions_code.h  dereference_iterator.h  functor.h  keyboard_state.cpp  keyboard_state.h  stdinc.h  stdmacro.h  stdmacro_c.h
src/utils/: array_list.h  doubly_linked_list.h  list.h
src/world/: CMakeLists.txt  world.cpp  world.h  world_code.h
